--- a/SGXDNN/Makefile
+++ b/SGXDNN/Makefile
@@ -6,7 +6,7 @@ App_ASM_Objects := $(App_ASM_Files:%.S=bin/%.o)
 
 App_Cpp_Include_Paths := -I../Include/eigen -I../Include -Icrypto
 App_C_Flags := -fPIC $(App_Cpp_Include_Paths) -O3 -march=native -Wno-enum-compare -fopenmp
-App_Cpp_Flags := -std=c++11 $(App_C_Flags)
+App_Cpp_Flags := -std=c++11 $(App_C_Flags) -Wignored-attributes -w
 
 Lib_Path := ../lib
 
